# notion-gcal-sync

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  MANIFEST.in  README.md  TODO  config.default.yml  config.examle.yml  environment.yml  install.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml  docker.yml  python-app.yml  release.yml  test.yml
docs/: dev.md  setup.md
notion-gcal-sync/: Config.py  config.py  main.py  utils.py
notion-gcal-sync/clients/: GCalClient.py  NotionClient.py
notion-gcal-sync/events/: Event.py  GCalEvent.py  NotionEvent.py
notion-gcal-sync/utils/: Time.py
notion_gcal_sync/: __main__.py  config.default.yml  config.py  config.yml  core.py  install.py  utils.py
notion_gcal_sync/clients/: GCalClient.py  NotionClient.py
notion_gcal_sync/events/: Event.py  GCalEvent.py  NotionEvent.py
tests/: conftest.py  fixtures.py  test_Config.py
tests/assets/: test_config.yml
tests/events/: test_Event.py  test_GCalEvent.py  test_NotionEvent.py
tests/unit/: test_config.py  test_install.py  test_utils.py
tests/unit/events/: test_Event.py  test_GCalEvent.py  test_NotionEvent.py
tests/unit/utils/: test_Time.py
tests/utils/: test_Time.py  test_time.py
